# obibuf

./: Makefile  README.md  README_tmp.html  obi_validator.c  obicl.c  python_adapter.py
obibuf/: .gitignore  CMakeLists.txt  Makefile  README.md  ioc_config.py
obibuf.backup/: README.md  build.sh
obibuf.backup/obibuf/adapters/c/: obi_c_adapter.h
obibuf.backup/obibuf/adapters/python/: obi_adapter.py
obibuf.backup/obibuf/cli/: main.c
obibuf.backup/obibuf/core/src/: automaton.c
obibuf/include/obibuf/: obi_buffer.h
obibuf/include/obibuf/cli/: commands.h
obibuf/include/obibuf/core/: obibuf.h
obibuf/obibuf/core/audit/: audit.c  validator.c
obibuf/obibuf/core/src/: normalizer.c
obibuf/obibuf/core/tests/: test_validator.c
obibuf/schema/: secure_message.yaml
obibuf/src/core/: audit.c  normalizer.c  obibuf.c  validator.c
